--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,10 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "lib": ["dom", "esnext"],
+    "lib": [
+      "dom",
+      "esnext"
+    ],
     "jsx": "react",
     "declaration": true,
     "declarationDir": "dist/types",
@@ -14,6 +17,13 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "dist"
   },
-  "include": ["./index.ts", "./theme.ts", "./theme.d.ts"],
-  "exclude": ["node_modules", "dist"]
+  "include": [
+    "./index.ts",
+    "./theme.ts",
+    "./theme.d.ts"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 } 
